+npm publishing script

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,4 +10,4 @@ jobs:
           deno-version: v1.x
       - run: deno fmt --check
       - run: deno lint
-      - run: deno test
+      - run: deno task test
